# rustdayday

./: .gitignore  LEARNING_PLAN.md  README.md
.zed/: debug.json  tasks.json
stage-01-basics/: README.md
stage-01-basics/docs/: 01-toolchain.md  02-hello-world.md  03-variables-and-types.md  04-control-flow.md  05-functions.md  06-ownership.md  07-borrowing.md  08-slices.md  09-stage-review.md
stage-01-basics/project-01-guess-game/: README.md
stage-02-structuring/: README.md
stage-02-structuring/docs/: 01-structs.md  02-methods.md  03-enums-and-pattern-matching.md  04-option-result.md  05-error-handling.md  06-modules-crates.md  07-collections.md  08-stage-review.md
stage-02-structuring/project-02-cli-todo/: Cargo.toml  README.md
stage-03-generics-traits/: README.md
stage-03-generics-traits/docs/: 01-generics.md  02-traits.md  03-lifetimes.md  04-trait-objects.md  05-advanced-traits.md  06-stage-review.md
stage-03-generics-traits/project-03-lru-cache/: README.md
stage-04-smart-pointers-fp/: README.md
stage-04-smart-pointers-fp/docs/: 01-box-rc.md  02-refcell.md  03-closures.md  04-iterators.md  05-smart-pointers-advanced.md  06-stage-review.md
stage-04-smart-pointers-fp/project-04-text-parser/: README.md
stage-05-concurrency-async/: README.md
stage-05-concurrency-async/docs/: 01-threads.md  02-channels.md  03-shared-state.md  04-async-await.md  (+3 more)
stage-06-real-projects/: README.md
stage-06-real-projects/project-A-async-web/: Cargo.toml  README.md
stage-06-real-projects/project-A-async-web/src/: error.rs  main.rs  model.rs  routes.rs  state.rs
(+145 files in other folders)
